--- a/src/styles/editor-block-transitions.scss
+++ b/src/styles/editor-block-transitions.scss
@@ -1,4 +1,4 @@
-#editor {
+.block-editor-page {
 	.stk-block,
 	.stk-container,
 	.stk-container-padding,
